--- a/views/bio.ejs
+++ b/views/bio.ejs
@@ -1,6 +1,7 @@
 <% layout("layouts/boilerplate") %>
 <div class="row bioexp py-4">
   <div class="col-10 offset-1">
+    <h1 class="mb-5">Bio</h1>
     <p>
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat suscipit
       maxime quos illo praesentium? Repudiandae ullam velit ea similique quae,
