--- a/views/bio.ejs
+++ b/views/bio.ejs
@@ -1,40 +1,32 @@
 <% layout("layouts/boilerplate") %>
 <div class="row bioexp py-4">
-  <div class="col-10 offset-1">
+  <div class="col-8 offset-2">
     <h1 class="mb-5">Bio</h1>
-    <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat suscipit
-      maxime quos illo praesentium? Repudiandae ullam velit ea similique quae,
-      quod voluptatum, sequi officiis a quasi labore ipsum ab vel? Error
-      voluptates aut rerum aspernatur minus tenetur quos labore quia quam totam,
-      dolores esse ipsum neque temporibus cumque sapiente sunt exercitationem.
-      Eligendi totam aut aspernatur, quae id debitis doloribus possimus. Ipsum
-      magni corrupti deserunt hic earum aut ipsa, similique quod totam
-      consectetur iste suscipit ratione, alias tenetur, cum commodi aspernatur
-      voluptatum ipsam minima mollitia molestias? Fugiat ad ipsam quos. Id.
-      Eaque, numquam voluptates! Facere aperiam, amet a repellendus reiciendis
-      veritatis, nobis provident, fuga officia sapiente debitis pariatur?
-      Itaque, reiciendis ea, veniam qui accusantium voluptatum omnis odio maxime
-      labore explicabo nobis. Neque officiis placeat saepe amet accusantium,
-      voluptate consequuntur aspernatur consectetur soluta magnam atque sed
-      maiores alias quo dignissimos ipsum minima dolore debitis impedit illum
-      non aliquam? Delectus inventore doloribus ut. Totam atque pariatur,
-      voluptate molestias quae velit labore maiores officia repellendus. Iure
-      illum, error repudiandae distinctio impedit velit quisquam laudantium
-      repellendus, temporibus maiores corporis minima doloremque, asperiores
-      minus enim laborum. Assumenda, quasi placeat ratione esse fugit possimus
-      nobis natus error. Ducimus quo neque quisquam quaerat commodi placeat,
-      nostrum quibusdam quia odit iste tenetur laboriosam ipsa velit quas et
-      nihil iure? Ab libero odio necessitatibus minus culpa? Perspiciatis neque
-      a saepe nobis odio eveniet, aperiam cum tempora, modi totam id dignissimos
-      aspernatur voluptate recusandae asperiores possimus officiis atque eos.
-      Architecto, fugit. Ratione ipsam iusto nam fugiat pariatur ut beatae
-      delectus, aperiam, recusandae temporibus mollitia rem officiis incidunt
-      expedita molestiae eius earum ipsa sapiente! Quia officiis dolores hic
-      nihil ex soluta adipisci! Adipisci dolore porro, velit excepturi optio
-      dolor dolorem ratione tenetur dolorum ea eveniet vitae, error voluptatum
-      voluptatibus. Nobis iure debitis ab minus inventore temporibus nihil
-      consequuntur possimus, minima esse perspiciatis.
+    <p id="bioParagraph">
+      Being in love with problem-solving his whole life, Evan got interested in
+      software development in 2022. Wanting to learn how to create applications
+      and begin a career, he taught himself through online recourses how to
+      code. From watching course videos and scrolling on stack overflow, he
+      further developed his skills. He turned his ambitions into reality at the
+      start of 2024, beginning his role as a software engineering intern at
+      QuikTrip and in partnership with Multiverse in 2024. In his spare time,
+      Evan enjoys playing basketball, lifting weights, listening to audiobooks,
+      playing videogames, and learning about history.
     </p>
+  </div>
+</div>
+
+<div class="row bioexp py-4 mt-5">
+  <div class="col-6 offset-2">
+    <h4>Connect With Me!</h4>
+  </div>
+  <div class="col-4">
+    <a href="https://www.linkedin.com/in/evan-martincek-606631209/"
+      ><img
+        id="linkedInLogo"
+        class="navbar-brand"
+        src="linkedIn.png"
+        alt="LinkedIn"
+    /></a>
   </div>
 </div>
