--- a/views/bio.ejs
+++ b/views/bio.ejs
@@ -22,11 +22,7 @@
   </div>
   <div class="col-4">
     <a href="https://www.linkedin.com/in/evan-martincek-606631209/"
-      ><img
-        id="linkedInLogo"
-        class="navbar-brand"
-        src="linkedIn.png"
-        alt="LinkedIn"
+      ><img id="linkedInLogo" src="linkedIn.png" alt="LinkedIn"
     /></a>
   </div>
 </div>
