--- a/views/bio.ejs
+++ b/views/bio.ejs
@@ -18,11 +18,11 @@
 
 <div class="row bioexp py-4 mt-5">
   <div class="col-6 offset-2">
-    <h4>Connect With Me!</h4>
+    <h4>Connect With Evan!</h4>
   </div>
   <div class="col-4">
     <a href="https://www.linkedin.com/in/evan-martincek-606631209/"
-      ><img id="linkedInLogo" src="linkedIn.png" alt="LinkedIn"
+      ><img class="logo" src="linkedIn.png" alt="LinkedIn"
     /></a>
   </div>
 </div>
